--- a/config/deploy/pod-autoscaler.yaml
+++ b/config/deploy/pod-autoscaler.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: sa-monitoring
-  namespace: default
+  name: pod-autoscaler
+  namespace: kube-system
 automountServiceAccountToken: false
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: system-autoscaler:sa-monitoring
+  name: system-autoscaler:pod-autoscaler
 rules:
   - apiGroups: [""]
     resources: ["pods", "services", "nodes"]
@@ -22,40 +22,53 @@ rules:
   - apiGroups: ["systemautoscaler.polimi.it"]
     resources: ["podscales"]
     verbs: ["*"]
+  - apiGroups: ["custom.metrics.k8s.io"]
+    resources: ["pods/response_time"]
+    verbs: ["*"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: system-autoscaler:sa-monitoring
+  name: system-autoscaler:pod-autoscaler
 subjects:
   - kind: ServiceAccount
-    name: sa-monitoring
-    namespace: default
+    name: pod-autoscaler
+    namespace: kube-system
     apiGroup: ""
 roleRef:
   kind: ClusterRole
-  name: system-autoscaler:sa-monitoring
+  name: system-autoscaler:pod-autoscaler
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: monitoring
+  name: pod-autoscaler
+  namespace: kube-system
 spec:
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
-      app: monitoring
+      app: pod-autoscaler
   replicas: 1
   template:
     metadata:
       labels:
-        app: monitoring
+        app: pod-autoscaler
     spec:
       nodeSelector:
         node-role.kubernetes.io/master: "true"
       automountServiceAccountToken: true
-      serviceAccountName: sa-monitoring
+      serviceAccountName: pod-autoscaler
       containers:
-        - name: monitoring
-          image: systemautoscaler/system-autoscaler-monitoring:distributed
+        - name: pod-autoscaler
+          image: systemautoscaler/pod-autoscaler:dev
           imagePullPolicy: Always
+          resources:
+            limits:
+              cpu: 500m
+              memory: 500Mi
+            requests:
+              cpu: 500m
+              memory: 500Mi
